# advent-of-code-cli

./: .gitignore  .ocamlformat  README.md  advent-of-code-cli.opam  dune  dune-project
.devcontainer/: devcontainer.json
lib/: dune
lib/advent_of_code/: client.ml  client.mli  day.ml  day.mli  dune  event.ml  event.mli  puzzle.ml  puzzle.mli
lib/advent_of_code/types/: day.ml  day.mli  year.ml  year.mli
lib/advent_of_code_cli/: advent_of_code_cli.ml  advent_of_code_cli.mli  arguments.ml  dune
lib/advent_of_code_cli/commands/: download_input.ml  init.ml  input.ml  input.mli
lib/commons/: dune  option.ml  result.ml
test/: dune
